fix(common): lw-8175 fixes input field content alignment  on Send destination

--- a/packages/common/src/ui/components/Form/Input/Input.module.scss
+++ b/packages/common/src/ui/components/Form/Input/Input.module.scss
@@ -71,6 +71,8 @@
   &.filled {
     font-size: var(--bodyXS) !important;
     line-height: size_unit(2) !important;
-    padding-top: size_unit(1.25);
+    transform: translateY(0) !important;
+    top: 10px;
+
   }
 }
